# slater

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  DOCKERHUB.md  Dockerfile  Dockerfile.lite  Efficient encoding for graph storage components - Claude.html  LICENSE  NOTICE  README.md  SECURITY_WORKLIST.md  THREAT_MODEL.md  acl.json  config.json  docker-compose.yml
.cargo/: config.toml
.claude/review-findings/: slater-review-2026-07-13.json
.githooks/: pre-commit  pre-push
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  dockerhub-description.yml  fuzz-nightly.yml  release.yml
Efficient encoding for graph storage components - Claude_files/: c6a992d55-tU2n_wXT.css  index-9bmTXN5h.js.download  saved_resource.html
crates/graph-format/: Cargo.toml
crates/graph-format/benches/: blockcache.rs  codec.rs  decodedblockcache.rs
crates/graph-format/src/: blockcache.rs  blockfile.rs  codec.rs  columns.rs  consolidate_dump.rs  crypto.rs  degree_ef.rs  extents.rs  extsort.rs  histogram.rs  hubdegree.rs  ids.rs  integrity.rs  isam.rs  lib.rs  manifest.rs  membudget.rs  nodedegree.rs  nodelabels.rs  plane.rs  postings.rs  pq.rs  rwvamana.rs  segindex.rs  segmanifest.rs  segment.rs  segpostings.rs  segvamana.rs  segvectors.rs  setmanifest.rs  store.rs  topology.rs  vamana.rs  vamana_delete.rs  vamana_merge.rs  vecmanifest.rs  vectors.rs  wire.rs
crates/graph-format/src/store/: asyncbridge.rs  diskcache.rs  fs.rs  gcs.rs  mem.rs  s3.rs
crates/graph-format/tests/: forged_lengths.rs  gcs_emulator.rs  gcs_real.rs  s3_minio.rs
crates/slater/: Cargo.toml
crates/slater-build/: Cargo.toml
crates/slater-build/src/: buckets.rs  build.rs  build_external.rs  cluster.rs  common.rs  diag.rs  direct_ingest.rs  main.rs  merge_build.rs  model.rs  overlay.rs  parser.rs  primitive_cypher.pest  resolve.rs  set_eval.rs  shared.rs
crates/slater-build/tests/: build_diagnostics.rs  dump_ingest_bounds.rs  emit_determinism.rs  endpoint_postings.rs  golden_external_roundtrip.rs  golden_merge_roundtrip.rs  golden_node_identity.rs  golden_overwrite_roundtrip.rs  golden_roundtrip.rs  golden_set_functions.rs  memory_budget.rs  pk_field_import.rs  property_histograms.rs  resume.rs  stdin_input.rs
crates/slater-delta/: Cargo.toml
crates/slater-delta/src/: identity.rs  interner.rs  l0.rs  l0_offheap.rs  lib.rs  memtable.rs  seal.rs  wal.rs
crates/slater-scalar/: Cargo.toml
crates/slater-scalar/src/: lib.rs
crates/slater/benches/: delta_overlay.rs  ipnsw_base_e2e.rs  ipnsw_ladder_e2e.rs  ipnsw_pq_checkpoint.rs  ipnsw_spike.rs  mips_recall.rs  segment_read_amp.rs  streaming_merge.rs  vector_delete_io.rs  vector_insert.rs  vector_knn.rs  vector_recall.rs  vector_rwindex.rs
crates/slater/examples/: bolt_probe.rs  write_cycle.rs
crates/slater/src/: acl.rs  algo.rs  benchkit.rs  cache.rs  config.rs  consolidate.rs  cron_window.rs  cypher.pest  degree_column.rs  delta_writer.rs  diag.rs  dump.rs  exec.rs  flush_segment.rs  generation.rs  health.rs  help.rs  introspect.rs  lib.rs  main.rs  merge_segment.rs  parser.rs  parser_conformance_tests.rs  plan.rs  query.rs  read_view.rs  rwindex.rs  segstack.rs  server.rs  temporal.rs  testgen.rs  vecbench.rs  vector.rs
crates/slater/src/bolt/: chunk.rs  client.rs  handshake.rs  message.rs  mod.rs  packstream.rs
crates/slater/src/exec/: access.rs  driver.rs  eval.rs  knn.rs  matchclause.rs  proc.rs  project.rs  scan.rs  tests.rs  traverse.rs
crates/slater/src/server/: conn.rs  consolidate.rs  handle.rs  listen.rs  query.rs  registry.rs  tests.rs  write.rs
crates/slater/tests/: dump_roundtrip.rs  memory_headline.rs  object_store_readamp.rs  smoke_1m.rs  wd91m_write_smoke.rs  writable_bolt_roundtrip.rs
docs/: BUILD-PERF-PLAN.md  CODEC-BENCH.md  DECISIONS.md  EMIT-TOPOLOGY-PARALLELISM.md  GQL-PLAN.md  GQL-PROGRESS.md  HARDENING.md  HISTOGRAM-PLAN.md  LOAD-TESTING.md  MERGE-DUMP-FORMAT.md  PARALLEL-QUERY-PLAN.md  PERF-REPORT.md  PLAN.md  PROGRESS.md  QA-v0.23.1.md  RESUME.md  S3-DISK-CACHE-PLAN.md  SEGMENTED-CORE-PLAN.md  SEGMENTED-CORE-READ-AMP.md  WRITABLE-PLAN.md  WRITABLE-PROGRESS.md
docs/manual/: 01-introduction.md  02-quickstart.md  03-data-model.md  04-types-and-values.md  05-building-graphs.md  06-build-cli-reference.md  07-querying.md  08-functions-and-expressions.md  09-procedures-and-algorithms.md  10-vector-search.md  11-writing-data.md  12-storage.md  13-deployment.md  14-configuration-reference.md  15-security.md  16-performance-tuning.md  17-client-compatibility.md  18-troubleshooting.md  README.md
docs/manual/examples/: README.md  products-vec.cypher  social.cypher
fuzz/: Cargo.toml
fuzz/fuzz_targets/: chunk_decode.rs  packstream_decode.rs  parse_query.rs  parse_statement.rs  segment_decode.rs  wal_replay.rs  wire_read_value.rs
perf/: PERF-v0.22.1-postreview.md  PERF_CURRENT_STATUS.md  PERF_PROGRESS.md  READ-AB-writeable-vs-v0.21.0.md  README.md  bench.py
perf/cross-engine/: README.md  aggregate.py  bench_one.py  count.py  load_graph.py  run_bench.sh
perf/cross-engine-hs/: Dockerfile.ladybug  README.md  aggregate_hs.py  bench_mesh.py  bench_multihop.py  bench_pole.py  bench_vec.py  bench_wiki.py  bench_with_rss.py  bulk_export.py  count_hs.py  engines.py  load_arcadedb.py  load_cypher.py  load_ladybug.py  load_ladybug_csv.py  run_bench_hs.sh  sample_anon.sh  setup_hs.sh
perf/loadtest/: .gitignore  README.md  coordinator.py  locustfile.py  queries.py  requirements.txt  scenarios.py
