# Slater — a low-memory, read-only, Bolt-speaking graph engine.
#
# Internal cargo workspace of three crates. `hs-utils` is pulled in by the
# member crates via git+tag (house convention — never a path dependency), even
# though Slater is itself a workspace.
[workspace]
resolver = "2"
members = ["crates/graph-format", "crates/slater-scalar", "crates/slater-delta", "crates/slater-build", "crates/slater"]

[workspace.package]
version = "0.23.0"
edition = "2021"
rust-version = "1.97"
license = "Apache-2.0"

# Centralised dependency versions; member crates opt in with `.workspace = true`.
# Listing a dependency here that no member uses yet is harmless — it only takes
# effect when a member declares it.
[workspace.dependencies]
# Shared house utilities: config layering, logging init, deserialisers.
# config/logging/healthcheck are NOT feature-gated, so default-features = false
# pulls none of the actix/sqlx stack — exactly what a Bolt server wants.
hs-utils = { git = "https://github.com/Hikari-Systems/hs-utils-rs", tag = "v0.17.0", default-features = false }

# Workspace-internal.
graph-format = { path = "crates/graph-format" }
slater-scalar = { path = "crates/slater-scalar" }
slater-delta = { path = "crates/slater-delta" }

# Core.
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

# Async + server (slater).
tokio = { version = "1", features = ["full"] }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
# Test-only: mints a throwaway self-signed cert so the TLS accept path can be driven in a
# unit test (the slow-loris handshake guard) without committing key material to the repo.
rcgen = "0.13"

# Storage codec (graph-format).
zstd = "0.13"
# `rayon` gives `Hasher::update_rayon`, which hashes one buffer across the pool.
# BLAKE3 is a Merkle tree, so a single large file parallelises internally — which is
# what the publish phase needs: `topology.csr.blk` alone is 71% of a generation's
# bytes, so fanning out across *files* would leave it on one core.
blake3 = { version = "1", features = ["rayon"] }
byteorder = "1"
# Per-frame WAL checksum (slater-delta) — detects a torn crash tail on replay.
crc32c = "0.6"

# Crypto (graph-format encryption / slater ACL).
chacha20poly1305 = "0.10"
argon2 = "0.5"

# Parser + CLI (slater-build, slater).
pest = "2"
pest_derive = "2"
clap = { version = "4", features = ["derive"] }

# Parallel query execution (slater).
rayon = "1"

# Inline storage for the per-entity property/label blobs the build shuttles through its
# sort records. `SmallVec<[u8; 16]>` is exactly `Vec<u8>`'s 24 bytes, so it is a drop-in
# that removes a heap allocation per record: a Wikidata edge carries no properties, and
# its encoded props record is the single byte `uvarint(0)`.
smallvec = { version = "1", features = ["union", "const_generics"] }

# Portable explicit SIMD for the brute-force vector-kNN dot kernel (slater). Gives
# guaranteed vectorization independent of the optimizer's autovectorizer (which the
# `opt-level = "s"` release profile largely suppresses): SSE2/NEON at each arch's
# baseline, widening to AVX2 when the x86 image is built with `-Ctarget-cpu=x86-64-v3`.
wide = "0.7"

# Regular expressions (slater: `=~` operator + `string.*RegEx` functions).
regex = "1"

# Randomness (slater: the Cypher `rand()` function). Replaces a hand-rolled
# per-thread SplitMix64 — a bespoke generator whose uniformity this repo would
# otherwise have to re-argue on every review, which is the exact class of
# bit-level reasoning that produced HIK-74 (`rand()` stuck in `[0.5, 0.75)`).
#
# `rand` 0.9 was already resolved in `Cargo.lock` (via `quinn-proto`) but nothing
# compiled it. Adopting it adds SIX crates to the compiled graph, not the three
# you would guess from `rand`'s direct deps — measured, not assumed
# (`cargo tree -e normal --workspace`, diffed against the parent commit):
#
#   rand 0.9 ─┬─ rand_chacha 0.9 ─┬─ ppv-lite86 0.2 ── zerocopy 0.8
#             │                   └─ rand_core 0.9 ── getrandom 0.3
#             └─ rand_core 0.9 (*)
#
# `ppv-lite86`/`zerocopy` are ChaCha's SIMD backend and are unavoidable if we want
# `ThreadRng` — ThreadRng *is* ChaCha12, so `rand_chacha` and its backend come with
# it. `getrandom` 0.3 is a third co-existing major of a crate already compiled at
# 0.2 (via ring/rustls) and 0.4 (via uuid); `rand_core` 0.9 likewise co-exists with
# the 0.6 the crypto stack (argon2, chacha20poly1305) uses for its `OsRng`.
# Cargo compiles each semver-major separately, so these are additive, not shared.
#
# That is the honest price of deleting a bespoke generator. Worth it: `ThreadRng`
# is a thread-local ChaCha12 CSPRNG seeded once from the OS, so `rand()` costs no
# per-row entropy syscall and no lock — and its uniformity is not a property this
# repo has to defend on every review.
rand = "0.9"

# Global allocator on Linux (slater). jemalloc's background purge threads return
# freed heap to the OS on a decay timer without the process making free() calls,
# replacing the former idle-gated malloc_trim FFI. The `background_threads` feature
# bakes `background_thread:true` into the build, so no runtime config or exported
# symbol is needed. Linux-only (glibc + musl); other targets keep the system malloc.
tikv-jemallocator = { version = "0.6", features = ["background_threads"] }

# Microbenchmark harness (slater dev-only): the vector-kNN kernel bench. Lean
# build — no plotters/gnuplot HTML reports, just the `cargo bench` harness.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

# Calendar arithmetic for the temporal value types (slater: date/localtime/
# localdatetime/duration). `clock` is disabled — Slater never reads the wall
# clock (the `.transaction`/now temporals are out of scope), so we only need the
# proleptic-Gregorian `NaiveDate`/`NaiveDateTime` calendar maths.
chrono = { version = "0.4", default-features = false, features = ["std"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"

# Benchmarks must reflect the *deployed* codegen, not cargo's opt-level=3 bench
# default — the vector-kNN kernel is hot and size-vs-speed (`opt-level`) changes
# its autovectorization materially. Mirror `release` so `cargo bench` numbers
# track production. (See `[profile.release.package.slater]` for the hot crate.)
[profile.bench]
lto = true
codegen-units = 1
opt-level = "s"

# Same deployed codegen as `release`, but keeps symbols (`release` sets
# `strip = true`) — needed for a profiler (e.g. `dhat`, via slater-build's
# `profiling` feature) to attribute allocations to real function names instead
# of addresses. `cargo build --profile profiling --features profiling`.
[profile.profiling]
inherits = "release"
strip = false
debug = true
