# cargo-fuzz targets for Slater's untrusted-input surface: the read-only Cypher
# query parser (`parse_query`) and the write-enabled statement parser
# (`parse_statement`); the Bolt/PackStream decoders (`chunk_decode`,
# `packstream_decode`); the core-segment record/meta decoders (`segment_decode`);
# and the writable-layer delta formats — the shared value codec (`wire_read_value`)
# and the on-disk WAL segment decoder (`wal_replay`). Kept as its own workspace (the
# empty `[workspace]` table below) so the instrumented `libfuzzer-sys` dependency
# never leaks into the main workspace build. Requires a nightly toolchain +
# cargo-fuzz; see `.github/workflows/{fuzz-nightly,release}.yml` (the `fuzz` jobs)
# and `cargo fuzz run <target>`.
[package]
name = "slater-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.slater]
path = "../crates/slater"

[dependencies.graph-format]
path = "../crates/graph-format"

[dependencies.slater-delta]
path = "../crates/slater-delta"

[workspace]

[[bin]]
name = "parse_query"
path = "fuzz_targets/parse_query.rs"
test = false
doc = false
bench = false

[[bin]]
name = "packstream_decode"
path = "fuzz_targets/packstream_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "chunk_decode"
path = "fuzz_targets/chunk_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "segment_decode"
path = "fuzz_targets/segment_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_statement"
path = "fuzz_targets/parse_statement.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wire_read_value"
path = "fuzz_targets/wire_read_value.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wal_replay"
path = "fuzz_targets/wal_replay.rs"
test = false
doc = false
bench = false
