[package]
name = "graph-format"
description = "Slater on-disk format: byte layout, block codec, manifest, dictionary, integrity, crypto."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
zstd.workspace = true
blake3.workspace = true
byteorder.workspace = true
chacha20poly1305.workspace = true
