[package]
name = "slater-build"
description = "Slater offline writer: primitive-Cypher dump script in, immutable on-disk graph image out."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "slater-build"
path = "src/main.rs"

# Compression trade-off benchmark: sweeps zstd levels over a real generation's
# `.blk` blocks (local or S3) and prints ratio / decode speed / GET latency / the
# per-backend knee. The S3 leg is meant to run in-region on EC2 (build `--features s3`).
[[bin]]
name = "bench-codec"
path = "src/bin/bench_codec.rs"

[features]
default = []
# Enable publishing a built generation to an S3 / object-store target.
s3 = ["graph-format/s3"]

[dependencies]
graph-format.workspace = true
slater-scalar.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
clap.workspace = true
pest.workspace = true
pest_derive.workspace = true
tracing.workspace = true
rayon.workspace = true
