[package]
name = "slater-build"
description = "Slater offline writer: primitive-Cypher dump script in, immutable on-disk graph image out."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "slater-build"
path = "src/main.rs"

# Compression trade-off benchmark: sweeps zstd levels over a real generation's
# `.blk` blocks (local or S3) and prints ratio / decode speed / GET latency / the
# per-backend knee. It is an occasional **tuning tool**, not part of building or
# serving graphs, so it is gated behind the `bench-codec` feature and is NOT built
# by default (`required-features`). Build it on request with
# `cargo build -p slater-build --features bench-codec --bin bench-codec`
# (add `--features bench-codec,s3` for the in-region S3 I/O leg).
[[bin]]
name = "bench-codec"
path = "src/bin/bench_codec.rs"
required-features = ["bench-codec"]

[features]
default = []
# Build the `bench-codec` tuning binary (off by default — see the [[bin]] above).
bench-codec = []
# Enable publishing a built generation to an S3 / object-store target.
s3 = ["graph-format/s3"]
# Enable publishing a built generation to a GCS target.
gcs = ["graph-format/gcs"]
# Heap-profiling build: swaps in dhat's counting allocator and writes
# dhat-heap.json (viewable at https://nnethercote.github.io/dh_view/dh_view.html)
# on exit, attributing live bytes at peak RSS to allocation call stacks. For
# ad-hoc investigation of phases whose RSS exceeds their nominal --max-memory
# budget (e.g. resolve/cluster at Wikidata scale) — never on by default, ~2-3x
# slowdown. `cargo build --release --features profiling`.
profiling = ["dep:dhat"]

[dependencies]
graph-format.workspace = true
slater-scalar.workspace = true
hs-utils.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
clap.workspace = true
pest.workspace = true
pest_derive.workspace = true
tracing.workspace = true
rayon.workspace = true
dhat = { version = "0.3", optional = true }
# Global allocator on Linux (wired in main.rs). The band workers free ~1.5B small
# `props_blob` allocations into per-thread arenas that glibc never returns to the OS;
# jemalloc's background purge threads do return them, on a decay timer. Not
# `malloc_trim` — this crate forbids `unsafe`, so the libc FFI is unavailable to it
# (the same reason `slater` moved off it). Linux-only; other targets keep system malloc.
[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator.workspace = true

[lints.rust]
# slater-build contains no `unsafe`: the LDG clustering pass writes disjoint stripes
# of the partition map via rayon's `par_chunks_mut`, so the borrow checker proves the
# non-overlap that a raw-pointer split used to assert by hand. Forbid keeps it that way.
unsafe_code = "forbid"
