[package]
name = "slater"
description = "Slater online server: read-only Bolt/Cypher over the immutable on-disk graph format, bounded resident memory."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "slater"
path = "src/main.rs"

[dependencies]
graph-format.workspace = true
slater-scalar.workspace = true
slater-delta.workspace = true
hs-utils.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tokio.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
argon2.workspace = true
rayon.workspace = true
wide.workspace = true
clap.workspace = true
pest.workspace = true
pest_derive.workspace = true
regex.workspace = true
chrono = { workspace = true, features = ["clock"] }

# jemalloc is the global allocator only on Linux (wired in main.rs); macOS and other
# dev targets keep the system allocator.
[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator.workspace = true

[features]
default = []
# Enable the S3 / object-store data backend (forwards to graph-format).
s3 = ["graph-format/s3"]
# Enable the GCS data backend (forwards to graph-format).
gcs = ["graph-format/gcs"]
# Expose the `testgen` fixture builder to benchmarks (off by default; not shipped
# in a normal build). Required by the `delta_overlay` read-regression bench.
testkit = []

[lints.rust]
# The server is entirely free of `unsafe`: heap return to the OS is now jemalloc's
# job (see main.rs / the tikv-jemallocator dep), so the former libc `malloc_trim`
# FFI is gone and the only remaining unsafe lives inside the audited allocator crate.
unsafe_code = "forbid"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "vector_knn"
harness = false

# The `slater dump` round-trip e2e uses the `testgen` fixture (testkit-gated), so
# it only compiles with the feature on; `#[ignore]` besides. Run:
# `cargo test -p slater --features testkit --test dump_roundtrip -- --ignored`.
[[test]]
name = "dump_roundtrip"
required-features = ["testkit"]

# Proves the writable layer's empty-delta read path is a zero-cost pass-through:
# A/Bs a node-materialisation loop over a bare `Generation` vs a `MergedView` with
# an empty delta. Run: `cargo bench -p slater --features testkit --bench delta_overlay`.
[[bench]]
name = "delta_overlay"
harness = false
required-features = ["testkit"]
