[package]
name = "slater"
description = "Slater online server: read-only Bolt/Cypher over the immutable on-disk graph format, bounded resident memory."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "slater"
path = "src/main.rs"

[dependencies]
graph-format.workspace = true
slater-scalar.workspace = true
slater-delta.workspace = true
hs-utils.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tokio.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
argon2.workspace = true
rayon.workspace = true
wide.workspace = true
clap.workspace = true
pest.workspace = true
pest_derive.workspace = true
regex.workspace = true
rand.workspace = true
chrono = { workspace = true, features = ["clock"] }

# jemalloc is the global allocator only on Linux (wired in main.rs); macOS and other
# dev targets keep the system allocator.
[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator.workspace = true

[features]
default = []
# Enable the S3 / object-store data backend (forwards to graph-format).
s3 = ["graph-format/s3"]
# Enable the GCS data backend (forwards to graph-format).
gcs = ["graph-format/gcs"]
# Expose the `testgen` fixture builder to benchmarks (off by default; not shipped
# in a normal build). Required by the `delta_overlay` read-regression bench.
testkit = []
# Compile the write-resolve perf/memory micro-bench
# (`bench_resolve_business_key_over_the_segment`). Off by default so the bench —
# and its Linux-only `/proc/self/{statm,status}` RSS sampling — is never built or
# run by a normal `cargo test`; enable with `--features perf-mem`.
perf-mem = []

[lints.rust]
# The server is entirely free of `unsafe`: heap return to the OS is now jemalloc's
# job (see main.rs / the tikv-jemallocator dep), so the former libc `malloc_trim`
# FFI is gone and the only remaining unsafe lives inside the audited allocator crate.
unsafe_code = "forbid"

[dev-dependencies]
criterion.workspace = true
rcgen.workspace = true

[[bench]]
name = "vector_knn"
harness = false

# The `slater dump` round-trip e2e uses the `testgen` fixture (testkit-gated), so
# it only compiles with the feature on; `#[ignore]` besides. Run:
# `cargo test -p slater --features testkit --test dump_roundtrip -- --ignored`.
[[test]]
name = "dump_roundtrip"
required-features = ["testkit"]

# The full-write-clauses live Bolt round-trip drives every write clause over a real
# server + real `slater-build` consolidation off the `testgen` fixture (testkit-gated);
# `#[ignore]` besides. Run: `SLATER_BUILD_BIN=$CARGO_TARGET_DIR/debug/slater-build
# cargo test -p slater --features testkit --test writable_bolt_roundtrip -- --ignored`.
[[test]]
name = "writable_bolt_roundtrip"
required-features = ["testkit"]

# The same live Bolt write-clause round-trip against a prebuilt 91.6M-node wikidata
# generation as the starting core (env-driven, `#[ignore]`, testkit-gated) — the scale
# companion to `writable_bolt_roundtrip`. Run: `SLATER_WD91M_DIR=… SLATER_WD91M_GRAPH=…
# cargo test -p slater --features testkit --test wd91m_write_smoke -- --ignored`.
[[test]]
name = "wd91m_write_smoke"
required-features = ["testkit"]

# Proves the writable layer's empty-delta read path is a zero-cost pass-through:
# A/Bs a node-materialisation loop over a bare `Generation` vs a `MergedView` with
# an empty delta. Run: `cargo bench -p slater --features testkit --bench delta_overlay`.
[[bench]]
name = "delta_overlay"
harness = false
required-features = ["testkit"]

# Phase 8 read-amp harness: measures point-lookup / 2-hop / label-scan / count read
# amplification (cold-cache block misses, base + segment) and warm latency over the same
# graph folded to 0/2/4/8 upper segments. Proves an untouched read stays flat as the stack
# grows. Run: `cargo bench -p slater --features testkit --bench segment_read_amp`.
[[bench]]
name = "segment_read_amp"
harness = false
required-features = ["testkit"]

# Read-amp correctness parity over a real object store (MinIO/S3, fake-gcs-server/GCS). Both
# arms skip unless their endpoint env var is set. The S3 arm needs `s3`, the GCS arm `gcs`; the
# file builds with just `testkit` (store arms cfg'd out). See the file header for run commands.
[[test]]
name = "object_store_readamp"
required-features = ["testkit"]
